--- a/src/main/resources/gui/DoctorController.fxml
+++ b/src/main/resources/gui/DoctorController.fxml
@@ -41,7 +41,7 @@
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" onAction="#goBackToSelectReport" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
+                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="48.0" />
                            </font>
@@ -84,7 +84,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </ComboBox>
-                        <Button layoutX="642.0" layoutY="619.0" mnemonicParsing="false" onAction="#selectReport" stylesheets="@buttonStyle.css" text="Check Selected Report" textFill="#ededf5">
+                        <Button layoutX="642.0" layoutY="619.0" mnemonicParsing="false" stylesheets="@buttonStyle.css" text="Check Selected Report" textFill="#ededf5">
                            <font>
                               <Font name="Arial Black" size="12.0" />
                            </font>
@@ -102,7 +102,7 @@
                         </Button>
                      </children>
                   </Pane>
-                  <Pane fx:id="panePatientView" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="panePatientView" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <TableView fx:id="tableViewPatients" layoutX="200.0" layoutY="137.0" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: DBE2EF;">
                            <columns>
@@ -119,7 +119,7 @@
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Button layoutX="516.0" layoutY="596.0" mnemonicParsing="false" onAction="#showPatientInfo" stylesheets="@buttonStyle.css" text="Check Selected Patient" textFill="#ededf5">
+                        <Button layoutX="516.0" layoutY="596.0" mnemonicParsing="false" stylesheets="@buttonStyle.css" text="Check Selected Patient" textFill="#ededf5">
                            <font>
                               <Font name="Arial Black" size="12.0" />
                            </font>
@@ -148,7 +148,7 @@
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" onAction="#goBackToSelectReport" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
+                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="48.0" />
                            </font>
@@ -238,7 +238,7 @@
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" onAction="#goBackToSelectReport" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
+                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="48.0" />
                            </font>
@@ -319,7 +319,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: DBE2EF;" AnchorPane.bottomAnchor="720.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Separator layoutX="366.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: DBE2EF; -fx-border-color: DBE2EF;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="366.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="buttonCheckLight" layoutX="5.0" layoutY="4.0" mnemonicParsing="false" onAction="#showPatients" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#112d4e" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <Button fx:id="buttonCheckLight" layoutX="5.0" layoutY="4.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#112d4e" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font name="Gill Sans MT Bold" size="18.0" />
                      </font>
@@ -335,7 +335,7 @@
                      </cursor></Button>
                   <Separator disable="true" layoutX="340.0" layoutY="10.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: ede8ef; -fx-border-color: ede8ef;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="610.0" AnchorPane.topAnchor="0.0" />
                   <Separator layoutX="350.0" layoutY="20.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: DBE2EF; -fx-border-color: DBE2EF;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="0.0" />
-                  <Button id="buttonSelected" fx:id="buttonCheckDark" disable="true" layoutX="5.0" layoutY="12.0" mnemonicParsing="false" onAction="#showPatients" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#5481a4" visible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <Button id="buttonSelected" fx:id="buttonCheckDark" disable="true" layoutX="5.0" layoutY="12.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#5481a4" visible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font name="Gill Sans MT Bold" size="18.0" />
                      </font>
