--- a/src/main/resources/gui/DoctorController.fxml
+++ b/src/main/resources/gui/DoctorController.fxml
@@ -27,7 +27,38 @@
                         <Image url="@../img/logo.png" />
                      </image>
                   </ImageView>
-                  <Pane fx:id="paneReportView" disable="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="panePatientList" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <TableView fx:id="tableViewPatients" layoutX="200.0" layoutY="137.0" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: DBE2EF;">
+                           <columns>
+                              <TableColumn fx:id="columnPatientID" editable="false" prefWidth="100.66665649414062" resizable="false" style="-fx-background-color: DBE2EF; -fx-border-color: #112d4e; -fx-border-width: 2;" text="Patient ID" />
+                              <TableColumn fx:id="columnPatientName" editable="false" prefWidth="698.0" resizable="false" style="-fx-background-color: DBE2EF; -fx-border-color: #112d4e; -fx-border-width: 2;" text="Patient Name" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <Text layoutX="200.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your patients:" wrappingWidth="800.0">
+                           <font>
+                              <Font name="Arial" size="18.0" />
+                           </font>
+                        </Text>
+                        <Button layoutX="516.0" layoutY="596.0" mnemonicParsing="false" stylesheets="@buttonStyle.css" text="Check Selected Patient" textFill="#ededf5">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <ComboBox fx:id="cbBoxSelectPatient" layoutX="400.0" layoutY="558.0" prefWidth="400.0" promptText="Select a Patient" style="-fx-background-color: e0e0e0;">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ComboBox>
+                     </children>
+                  </Pane>
+                  <Pane fx:id="paneShowPatient" disable="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="150.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
                         <Text fill="WHITE" layoutX="206.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Birthdate:" wrappingWidth="788.0000610351562">
@@ -41,7 +72,7 @@
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
+                        <Button cancelButton="true" layoutX="49.0" layoutY="17.0" mnemonicParsing="false" onAction="#showPatients" prefHeight="55.0" prefWidth="61.0" style="-fx-background-color: #f5f5f5;" styleClass="bigButton" stylesheets="@buttonStyle.css" text="&lt;" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="48.0" />
                            </font>
@@ -79,12 +110,12 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <ComboBox fx:id="comboBoxSelectedReport1" layoutX="212.0" layoutY="620.0" prefWidth="400.0" promptText="Select a Report" style="-fx-background-color: e0e0e0;">
+                        <ComboBox fx:id="cbBoxSelectReport" layoutX="212.0" layoutY="620.0" prefWidth="400.0" promptText="Select a Report" style="-fx-background-color: e0e0e0;">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </ComboBox>
-                        <Button layoutX="642.0" layoutY="619.0" mnemonicParsing="false" stylesheets="@buttonStyle.css" text="Check Selected Report" textFill="#ededf5">
+                        <Button fx:id="buttonCheckReport" layoutX="642.0" layoutY="619.0" mnemonicParsing="false" onAction="#checkReport" stylesheets="@buttonStyle.css" text="Check Selected Report" textFill="#ededf5">
                            <font>
                               <Font name="Arial Black" size="12.0" />
                            </font>
@@ -92,7 +123,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button layoutX="821.0" layoutY="619.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="170.0" stylesheets="@buttonStyle.css" text="Create New Report" textFill="#ededf5">
+                        <Button layoutX="821.0" layoutY="619.0" mnemonicParsing="false" onAction="#createReport" prefHeight="28.0" prefWidth="170.0" stylesheets="@buttonStyle.css" text="Create New Report" textFill="#ededf5">
                            <font>
                               <Font name="Arial Black" size="12.0" />
                            </font>
@@ -102,39 +133,7 @@
                         </Button>
                      </children>
                   </Pane>
-                  <Pane fx:id="panePatientView" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <TableView fx:id="tableViewPatients" layoutX="200.0" layoutY="137.0" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: DBE2EF;">
-                           <columns>
-                              <TableColumn fx:id="columnPatientID" editable="false" prefWidth="100.66665649414062" resizable="false" style="-fx-background-color: DBE2EF; -fx-border-color: #112d4e; -fx-border-width: 3;" text="Patient ID" />
-                              <TableColumn fx:id="columnPatientName" editable="false" prefWidth="298.66668701171875" resizable="false" style="-fx-background-color: DBE2EF; -fx-border-color: #112d4e; -fx-border-width: 3;" text="Patient Name" />
-                              <TableColumn fx:id="columnPatientSurname" editable="false" prefWidth="396.00006103515625" resizable="false" style="-fx-background-color: DBE2EF; -fx-border-color: #112d4e; -fx-border-width: 3;" text="Patient Surname" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                        <Text layoutX="200.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your patients:" wrappingWidth="800.0">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Text>
-                        <Button layoutX="516.0" layoutY="596.0" mnemonicParsing="false" stylesheets="@buttonStyle.css" text="Check Selected Patient" textFill="#ededf5">
-                           <font>
-                              <Font name="Arial Black" size="12.0" />
-                           </font>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-                        <ComboBox fx:id="cbBoxSelectPatient" layoutX="400.0" layoutY="558.0" prefWidth="400.0" promptText="Select a Patient" style="-fx-background-color: e0e0e0;">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </ComboBox>
-                     </children>
-                  </Pane>
-                  <Pane fx:id="paneReportView1" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="paneDetailedReport" disable="true" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="150.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
                         <Text fill="WHITE" layoutX="206.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="COPD Phenotype:" wrappingWidth="788.0000610351562">
@@ -224,7 +223,7 @@
                         <DatePicker layoutX="393.0" layoutY="405.0" opacity="0.75" prefHeight="25.0" prefWidth="175.0" />
                      </children>
                   </Pane>
-                  <Pane fx:id="paneReportView11" disable="true" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="paneCreateReport" disable="true" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f5f5f5;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="150.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
                         <Text fill="WHITE" layoutX="206.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Activity Minutes" wrappingWidth="788.0000610351562">
@@ -319,7 +318,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: DBE2EF;" AnchorPane.bottomAnchor="720.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Separator layoutX="366.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: DBE2EF; -fx-border-color: DBE2EF;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="366.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="buttonCheckLight" layoutX="5.0" layoutY="4.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#112d4e" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <Button fx:id="buttonCheckLight" layoutX="5.0" layoutY="4.0" mnemonicParsing="false" onAction="#showPatients" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#112d4e" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font name="Gill Sans MT Bold" size="18.0" />
                      </font>
@@ -335,7 +334,7 @@
                      </cursor></Button>
                   <Separator disable="true" layoutX="340.0" layoutY="10.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: ede8ef; -fx-border-color: ede8ef;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="610.0" AnchorPane.topAnchor="0.0" />
                   <Separator layoutX="350.0" layoutY="20.0" orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: DBE2EF; -fx-border-color: DBE2EF;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="0.0" />
-                  <Button id="buttonSelected" fx:id="buttonCheckDark" disable="true" layoutX="5.0" layoutY="12.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="360.0" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#5481a4" visible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <Button fx:id="buttonCheckDark" disable="true" layoutX="5.0" layoutY="12.0" mnemonicParsing="false" onAction="#showPatients" prefHeight="67.0" prefWidth="360.0" styleClass="buttonSelected" stylesheets="@menuButtonStyle.css" text="Check My Patients" textFill="#5481a4" visible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font name="Gill Sans MT Bold" size="18.0" />
                      </font>
