--- a/src/main/resources/gui/AdminController.fxml
+++ b/src/main/resources/gui/AdminController.fxml
@@ -27,54 +27,54 @@
                         <Image url="@../img/logo.png" />
                      </image>
                   </ImageView>
-                  <Pane fx:id="paneNewPatient" prefHeight="722.6666666666666" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="paneNewPatient" prefHeight="722.6666666666666" prefWidth="1200.0" style="-fx-background-color: #F9F7F7;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <PasswordField fx:id="pswFieldPatient" layoutX="209.0" layoutY="261.0" prefHeight="36.0" prefWidth="188.0" promptText="PASSWORD" />
-                        <TextField fx:id="textFieldUsernamePatient" layoutX="209.0" layoutY="196.0" prefHeight="42.0" prefWidth="189.0" promptText="USERNAME" />
+                        <PasswordField fx:id="pswFieldPatient" layoutX="263.0" layoutY="260.0" prefHeight="36.0" prefWidth="188.0" promptText="PASSWORD" />
+                        <TextField fx:id="textFieldUsernamePatient" layoutX="263.0" layoutY="195.0" prefHeight="42.0" prefWidth="189.0" promptText="USERNAME" />
                         <Label layoutX="62.0" layoutY="37.0" prefHeight="76.0" prefWidth="313.0" text="NEW PATIENT">
                            <font>
                               <Font name="Arial Black" size="36.0" />
                            </font>
                         </Label>
-                        <Label layoutX="62.0" layoutY="112.0" prefHeight="76.0" prefWidth="313.0" text="USER INFORMATION">
+                        <Label layoutX="116.0" layoutY="111.0" prefHeight="76.0" prefWidth="313.0" text="USER INFORMATION">
                            <font>
                               <Font name="Arial Black" size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="95.0" layoutY="187.0" prefHeight="62.0" prefWidth="112.0" text="USERNAME:">
+                        <Label layoutX="149.0" layoutY="186.0" prefHeight="62.0" prefWidth="112.0" text="USERNAME:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="97.0" layoutY="248.0" prefHeight="62.0" prefWidth="112.0" text="PASSWORD:">
+                        <Label layoutX="151.0" layoutY="247.0" prefHeight="62.0" prefWidth="112.0" text="PASSWORD:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="66.0" layoutY="337.0" prefHeight="76.0" prefWidth="354.0" text="PATIENT INFORMATION">
+                        <Label layoutX="655.0" layoutY="113.0" prefHeight="76.0" prefWidth="354.0" text="PATIENT INFORMATION">
                            <font>
                               <Font name="Arial Black" size="24.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldNamePatient" layoutX="257.0" layoutY="418.0" prefHeight="42.0" prefWidth="189.0" promptText="NAME" />
-                        <Label layoutX="106.0" layoutY="409.0" prefHeight="62.0" prefWidth="112.0" text="NAME:">
+                        <TextField fx:id="textFieldNamePatient" layoutX="846.0" layoutY="194.0" prefHeight="42.0" prefWidth="189.0" promptText="NAME" />
+                        <Label layoutX="695.0" layoutY="185.0" prefHeight="62.0" prefWidth="112.0" text="NAME:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldMedCardNumPatient" layoutX="257.0" layoutY="478.0" prefHeight="42.0" prefWidth="189.0" promptText="MEDICAL CARD NUMBER" />
-                        <Label layoutX="28.0" layoutY="468.0" prefHeight="62.0" prefWidth="221.0" text="MEDICAL CARD NUMBER:">
+                        <TextField fx:id="textFieldMedCardNumPatient" layoutX="846.0" layoutY="254.0" prefHeight="42.0" prefWidth="189.0" promptText="MEDICAL CARD NUMBER" />
+                        <Label layoutX="617.0" layoutY="244.0" prefHeight="62.0" prefWidth="221.0" text="MEDICAL CARD NUMBER:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="88.0" layoutY="531.0" prefHeight="62.0" prefWidth="166.0" text="BIRTHDATE:">
+                        <Label layoutX="677.0" layoutY="307.0" prefHeight="62.0" prefWidth="166.0" text="BIRTHDATE:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <DatePicker fx:id="datePickerBirthdate" layoutX="259.0" layoutY="547.0" prefHeight="31.0" prefWidth="184.0" />
-                        <Button fx:id="buttonCreatePatient" layoutX="846.0" layoutY="572.0" mnemonicParsing="false" onAction="#createPatient" prefHeight="73.0" prefWidth="223.0" stylesheets="@menuButtonStyle.css" text="Create patient" textFill="#705697">
+                        <DatePicker fx:id="datePickerBirthdate" layoutX="848.0" layoutY="323.0" prefHeight="31.0" prefWidth="184.0" />
+                        <Button fx:id="buttonCreatePatient" layoutX="465.0" layoutY="467.0" mnemonicParsing="false" onAction="#createPatient" prefHeight="73.0" prefWidth="223.0" stylesheets="@menuButtonStyle.css" text="Create patient" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="18.0" />
                            </font>
@@ -84,31 +84,31 @@
                         </Button>
                      </children>
                   </Pane>
-                  <Pane fx:id="paneNewStaffMember" layoutX="10.0" layoutY="10.0" prefHeight="722.6666666666666" prefWidth="1200.0" visible="false">
+                  <Pane fx:id="paneNewStaffMember" layoutX="10.0" layoutY="10.0" prefHeight="722.6666666666666" prefWidth="1200.0" style="-fx-background-color: #F9F7F7;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <PasswordField fx:id="pswFieldStaffMember" layoutX="209.0" layoutY="261.0" prefHeight="36.0" prefWidth="188.0" promptText="PASSWORD" />
-                        <TextField fx:id="textFieldUsernameStaffMember" layoutX="209.0" layoutY="196.0" prefHeight="42.0" prefWidth="189.0" promptText="USERNAME" />
-                        <Label layoutX="62.0" layoutY="37.0" prefHeight="76.0" prefWidth="454.0" text="NEW STAFF MEMBER">
+                        <PasswordField fx:id="pswFieldStaffMember" layoutX="547.0" layoutY="265.0" prefHeight="36.0" prefWidth="188.0" promptText="PASSWORD" />
+                        <TextField fx:id="textFieldUsernameStaffMember" layoutX="547.0" layoutY="200.0" prefHeight="42.0" prefWidth="189.0" promptText="USERNAME" />
+                        <Label layoutX="376.0" layoutY="47.0" prefHeight="76.0" prefWidth="454.0" text="NEW STAFF MEMBER">
                            <font>
                               <Font name="Arial Black" size="36.0" />
                            </font>
                         </Label>
-                        <Label layoutX="62.0" layoutY="112.0" prefHeight="76.0" prefWidth="313.0" text="USER INFORMATION">
+                        <Label layoutX="437.0" layoutY="117.0" prefHeight="76.0" prefWidth="313.0" text="USER INFORMATION">
                            <font>
                               <Font name="Arial Black" size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="95.0" layoutY="187.0" prefHeight="62.0" prefWidth="112.0" text="USERNAME:">
+                        <Label layoutX="433.0" layoutY="191.0" prefHeight="62.0" prefWidth="112.0" text="USERNAME:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="97.0" layoutY="248.0" prefHeight="62.0" prefWidth="112.0" text="PASSWORD:">
+                        <Label layoutX="435.0" layoutY="252.0" prefHeight="62.0" prefWidth="112.0" text="PASSWORD:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Button fx:id="buttonCreateStaffMember" layoutX="127.0" layoutY="408.0" mnemonicParsing="false" onAction="#createStaffMember" prefHeight="73.0" prefWidth="223.0" stylesheets="@menuButtonStyle.css" text="Create staff member" textFill="#705697">
+                        <Button fx:id="buttonCreateStaffMember" layoutX="465.0" layoutY="412.0" mnemonicParsing="false" onAction="#createStaffMember" prefHeight="73.0" prefWidth="223.0" stylesheets="@menuButtonStyle.css" text="Create staff member" textFill="#705697">
                            <font>
                               <Font name="Gill Sans MT Bold" size="18.0" />
                            </font>
@@ -116,21 +116,21 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <ComboBox fx:id="comboBoxRole" layoutX="208.0" layoutY="319.0" prefHeight="23.0" prefWidth="189.0" promptText="Role" />
-                        <Label layoutX="96.0" layoutY="301.0" prefHeight="62.0" prefWidth="115.0" text="ROLE:">
+                        <ComboBox fx:id="comboBoxRole" layoutX="546.0" layoutY="323.0" prefHeight="23.0" prefWidth="189.0" promptText="Role" />
+                        <Label layoutX="434.0" layoutY="305.0" prefHeight="62.0" prefWidth="115.0" text="ROLE:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
                      </children>
                   </Pane>
-                  <Pane fx:id="paneDeleteUser" prefHeight="722.6666666666666" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="paneDeleteUser" prefHeight="722.6666666666666" prefWidth="1200.0" style="-fx-background-color: #F9F7F7;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TableView fx:id="tableViewUsers" layoutX="49.0" layoutY="56.0" prefHeight="560.0" prefWidth="424.0">
+                        <TableView fx:id="tableViewUsers" layoutX="49.0" layoutY="56.0" prefHeight="560.0" prefWidth="609.0">
                           <columns>
-                            <TableColumn prefWidth="87.3333740234375" text="ID" />
-                            <TableColumn prefWidth="170.66668701171875" text="USERNAME" />
-                              <TableColumn prefWidth="165.3333740234375" text="ROLE" />
+                            <TableColumn fx:id="columnUserIds" prefWidth="87.3333740234375" text="ID" />
+                            <TableColumn fx:id="columnUserNames" prefWidth="294.0000305175781" text="USERNAME" />
+                              <TableColumn fx:id="columnUserRoles" prefWidth="226.00003051757812" text="ROLE" />
                           </columns>
                         </TableView>
                         <ComboBox fx:id="comboBoxUsers" layoutX="784.0" layoutY="334.0" prefHeight="31.0" prefWidth="290.0" />
