--- a/src/main/resources/gui/SuccessPopup.fxml
+++ b/src/main/resources/gui/SuccessPopup.fxml
@@ -13,7 +13,7 @@
             <Image url="@../img/successIcon.png" />
          </image>
       </ImageView>
-      <Label fx:id="successDisplayText" layoutX="95.0" layoutY="70.0" prefHeight="61.0" prefWidth="349.0" text="Label">
+      <Label fx:id="successDisplayText" layoutX="95.0" layoutY="70.0" prefHeight="61.0" prefWidth="349.0" text="Label" wrapText="true">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
